# simple-library-cmake-and-catch2

./: CMakeLists.txt  LICENSE  README.md
include/: MyLibrary.h
src/: MyLibrary.cpp
tests/: test1_MyLibrary.cpp  test2_MyLibrary.cpp
